--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,15 @@ body {
 html {
 	font-size: 10px;
 }
+a:active, a:visited, a:focus {
+	text-decoration: none;
+	outline: none;
+}
 .wrapper {
 	display:table-cell;
 	vertical-align:middle;
 }
-.main{
+.main {
 	position: relative;
 	display:table;
 	width: 100%;
@@ -20,15 +24,15 @@ html {
 .main-overlay {
 	position: absolute;
 	z-index: 1;
-	width: 100%;	
+	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgba(0,0,0,0.5);
 }
 .main h1 {
-margin-bottom: 1.4rem;
-font-weight: 300;
-text-transform: uppercase;
-font-size: 4.8rem;
+	margin-bottom: 1.4rem;
+	font-weight: 300;
+	text-transform: uppercase;
+	font-size: 4.8rem;
 }
 .main p {
 	font-size: 3rem;
@@ -47,25 +51,25 @@ font-size: 4.8rem;
 .main-down {
 	position: absolute;
 	color: #fff;
-	z-index: 4;	
+	z-index: 4;
 	bottom: 2rem;
 	display: inline-block;
-    font-size: 2rem;	
-    width: 50px;
-    height: 50px;
-    border-radius: 50%; ;
-    border: 1px solid transparent;
-    line-height: 50px;
-    left: 50%;
-    margin-left: -25px;
-    transition: 0.2s;
+	font-size: 2rem;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	border: 1px solid transparent;
+	line-height: 50px;
+	left: 50%;
+	margin-left: -25px;
+	transition: 0.2s;
 }
-   .main-down:hover {
+.main-down:hover {
 	color: #fff;
 	border-color: #fff;
 }
-/*Секцыя з портфолио*/
- .portfolio {
+/*Секция с портфолио*/
+.portfolio {
 	padding: 10rem 0px;
 	text-align: center;
 }
@@ -74,25 +78,25 @@ font-size: 4.8rem;
 	font-weight: 800;
 	font-size: 3.6rem;
 	margin-bottom: 5rem;
-	}
-	.portfolio img {
-		width: 100%;
-		max-width: 360px;
-		box-shadow: 0px 4px 29px 0px rgba(87, 92, 97, 0.54);
-	}
-	.portfolio a {
-		display: block;
-		margin: 2rem auto 6rem;
-		color: #333;
-		width: 17rem;
-		border-bottom: 1px solid transparent;
-	}
-	.portfolio a:hover {
+}
+.portfolio img {
+	width: 100%;
+	max-width: 360px;
+	box-shadow: 0px 4px 29px 0px rgba(87, 92, 97, 0.54);
+}
+.portfolio a {
+	display: block;
+	margin: 2rem auto 6rem;
+	color: #333;
+	width: 17rem;
+	border-bottom: 1px solid transparent;
+}
+.portfolio a:hover {
 	text-decoration: none;
 	border-bottom: 1px dotted #333;
-	}
-	/*Секция подвал*/
-	.footer {
+}
+/*Секция - подвал*/
+.footer {
 	background-color: #333;
 	color: #fff;
 	text-align: center;
@@ -102,10 +106,10 @@ font-size: 4.8rem;
 	font-weight: 300;
 	font-size: 2.4rem;
 }
-  .social-links {
-  	margin-top: 1rem;
-  }
-  .social-links a {
+.social-links {
+	margin-top: 1rem;
+}
+.social-links a {
 	width: 5rem;
 	height: 5rem;
 	line-height: 5rem;
@@ -140,7 +144,7 @@ font-size: 4.8rem;
 	color: #646464;
 }
 .modal img {
-	width: 115%;
+	width: 100%;
 }
 .modal-title {
 	font-weight: 800;
@@ -185,3 +189,8 @@ font-size: 4.8rem;
 		display: inline-block;
 	}
 }
+
+
+
+
+
